<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.why.whydaily.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.why.whydaily.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" >
        <action
            android:id="@+id/action_nav_diary_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_Math"
        android:name="com.why.whydaily.ui.study.Math.MathFragment"
        android:label="@string/menu_Math"
        tools:layout="@layout/fragment_math" >
        <action
            android:id="@+id/action_nav_Math_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_English"
        android:name="com.why.whydaily.ui.study.English.EnglishFragment"
        android:label="@string/menu_English"
        tools:layout="@layout/fragment_english" >
        <action
            android:id="@+id/action_nav_English_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_Politics"
        android:name="com.why.whydaily.ui.study.Politics.PoliticsFragment"
        android:label="@string/menu_Politics"
        tools:layout="@layout/fragment_politics" >
        <action
            android:id="@+id/action_nav_Politics_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_Computer_Science"
        android:name="com.why.whydaily.ui.study.Computer.ComputerFragment"
        android:label="@string/menu_Computer_Science"
        tools:layout="@layout/fragment_computer" >
        <action
            android:id="@+id/action_nav_Computer_Science_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>